Add delete result
