# public/api-docs/models/swagger.json
@@ -72,6 +72,30 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "tags": [
+                    "Results"
+                ],
+                "summary": "Deletes a result",
+                "description": "Deletes the result identified by `resultId`.",
+                "operationId": "miw_delete_results",
+                "parameters": [
+                    {
+                        "$ref": "#/parameters/resultId"
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Result deleted &lt;Response body is empty&gt;"
+                    },
+                    "404": {
+                        "description": "Result not found",
+                        "schema": {
+                            "$ref": "#/definitions/Message"
+                        }
+                    }
+                }
             }
         },
         "/users": {
