# src/routes_results.php
@@ -37,7 +37,7 @@ $app->get(
             ->getRepository('MiW16\Results\Entity\Result')
             ->findAll();
 
-        if (empty($results)) { // 404 - result object not found
+        if (empty($results)) {
             $newResponse = $response->withStatus(404);
             $datos = array(
                 'code' => 404,
@@ -84,7 +84,7 @@ $app->get(
             ->getRepository('MiW16\Results\Entity\Result')
             ->findOneById($args['id']);
 
-        if (empty($result)) {  // 404 - User id. not found
+        if (empty($result)) {
             $newResponse = $response->withStatus(404);
             $datos = array(
                 'code' => 404,
@@ -96,3 +96,52 @@ $app->get(
         return $response->withJson($result);
     }
 )->setName('miw_get_results');
+
+/**
+ * Summary: Deletes a result
+ * Notes: Deletes the result identified by &#x60;resultId&#x60;.
+ *
+ * @SWG\Delete(
+ *     method      = "DELETE",
+ *     path        = "/results/{resultId}",
+ *     tags        = { "Results" },
+ *     summary     = "Deletes a result",
+ *     description = "Deletes the result identified by `resultId`.",
+ *     operationId = "miw_delete_results",
+ *     parameters={
+ *          { "$ref" = "#/parameters/resultId" }
+ *     },
+ *     @SWG\Response(
+ *          response    = 204,
+ *          description = "Result deleted &lt;Response body is empty&gt;"
+ *     ),
+ *     @SWG\Response(
+ *          response    = 404,
+ *          description = "Result not found",
+ *          schema      = { "$ref": "#/definitions/Message" }
+ *     )
+ * )
+ */
+$app->delete(
+    '/results/{id:[0-9]+}',
+    function ($request, $response, $args) {
+        $this->logger->info('DELETE \'/results/' . $args['id'] . '\'');
+        $em = getEntityManager();
+        $result = $em
+            ->getRepository('MiW16\Results\Entity\Result')
+            ->findOneById($args['id']);
+        if (empty($result)) {
+            $newResponse = $response->withStatus(404);
+            $datos = array(
+                'code' => 404,
+                'message' => 'Result not found'
+            );
+            return $this->renderer->render($newResponse, 'message.phtml', $datos);
+        } else {
+            $em->remove($result);
+            $em->flush();
+        }
+
+        return $response->withStatus(204);
+    }
+)->setName('miw_delete_users');
